--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>John Keck</title>
-    <link rel="stylesheet" href="http://getskeleton.com/dist/css/normalize.css">
-    <link rel="stylesheet" href="http://getskeleton.com/dist/css/skeleton.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
     <style>
       body {
